testsuite/tests/typing-recmod/t14bad.compilers.reference
File "t14bad.ml", line 23, characters 17-39:
23 |   module rec U : T with type D.t = U'.t = U
                      ^^^^^^^^^^^^^^^^^^^^^^
Error: The definition of U.D.t contains a cycle:
       U'.t
